--- a/app/src/main/res/layout/activity_main_total.xml
+++ b/app/src/main/res/layout/activity_main_total.xml
@@ -20,13 +20,13 @@
             android:id="@+id/btn2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="启动应用"/>
+            android:text="弹幕视频"/>
 
         <Button
             android:id="@+id/btn3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="dianji"/>
+            android:text="测试视频"/>
 
         <Button
             android:id="@+id/btn4"
