--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -14,7 +14,7 @@
         android:id="@+id/btn1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="dianji"/>
+        android:text="开始弹幕"/>
 
 
     <LinearLayout
@@ -33,7 +33,7 @@
             android:id="@+id/btn2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="启动应用"/>
+            android:text="发送弹幕"/>
     </LinearLayout>
 
 </LinearLayout>
