--- a/app/src/main/res/layout/activity_main_total.xml
+++ b/app/src/main/res/layout/activity_main_total.xml
@@ -35,5 +35,22 @@
             android:text="启动应用"/>
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btn5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="handler"/>
+
+        <Button
+            android:id="@+id/btn6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="behavior"/>
+    </LinearLayout>
 
 </LinearLayout>
