--- a/app/src/main/res/layout/activity_main_total.xml
+++ b/app/src/main/res/layout/activity_main_total.xml
@@ -51,6 +51,36 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="behavior"/>
+
+        <Button
+            android:id="@+id/btn7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="商品详情"/>
+
+        <Button
+            android:id="@+id/btn8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="viturallayout"/>
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btn9"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="触摸"/>
+
+        <Button
+            android:id="@+id/btn10"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Swipe+刷新"/>
+        />
+    </LinearLayout>
 </LinearLayout>
