--- a/app/src/main/res/layout/pay_external.xml
+++ b/app/src/main/res/layout/pay_external.xml
@@ -29,7 +29,7 @@
         
         <Button
             android:id="@+id/h5pay"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:onClick="h5Pay"
