--- a/app/src/main/res/layout/activity_kuaidi.xml
+++ b/app/src/main/res/layout/activity_kuaidi.xml
@@ -17,6 +17,11 @@
         android:layout_height="wrap_content"
         android:text="查询"/>
 
+    <EditText
+        android:id="@+id/ev"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
