--- a/app/src/main/res/layout/fragment_bundle.xml
+++ b/app/src/main/res/layout/fragment_bundle.xml
@@ -16,4 +16,8 @@
         android:text="年后啊a"
         android:textSize="30sp"/>
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
 </LinearLayout>
