--- a/app/src/main/res/layout/activity_main_total.xml
+++ b/app/src/main/res/layout/activity_main_total.xml
@@ -196,5 +196,17 @@
             android:layout_height="wrap_content"
             android:text="上朝"/>
 
+        <Button
+            android:id="@+id/btn26"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="测试arche框架"/>
+
+        <Button
+            android:id="@+id/btn27"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="imagespan"/>
+
     </LinearLayout>
 </LinearLayout>
